--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS_Sandbox/illusion.css">
+    <link rel="stylesheet" href="css/illusion.css">
 </head>
 <body>
     <div class="background">
